--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,14 @@
         </div>
     </header>
 
+    <div class='container-fluid'>
+        <div class='row'>
+            <div class="team-display col-12 justify-content-center">
+                {{ team }}
+            </div>
+        </div>
+    </div>
+
 
     
 </body>
