--- a/src/intern.html
+++ b/src/intern.html
@@ -1,14 +1,14 @@
-
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h2 class="card-title">{{ role }}</h2>
+<div class="card card d-inline-block employee-card">
+    <div class="card-header header-color">
+        <h2 class="card-title display-2">{{ name }}</h2>
+        <h2 class="card-title"><i class="bi bi-book-half"> </i>
+            {{ role }}</h2>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{email}}">{{email}}</a></li>
-            <li class="list-group-item">School: {{school}}</li>
+            <li class="list-group-item">Email: <a href="mailto:{{email}}">{{ email }}</a></li>
+            <li class="list-group-item">School: {{ school }}</li>
         </ul>
     </div>
 </div>
